# openRTMP-claude-kiro

./: CMakeLists.txt  CMakePresets.json
.kiro/specs/cross-platform-rtmp-server/: design.md  requirements.md  spec.json  tasks.md  test-scenarios.md
cmake/: OpenRTMPConfig.cmake.in  android.toolchain.cmake  ios.toolchain.cmake
examples/: CMakeLists.txt  simple_server.cpp
include/openrtmp/: openrtmp.hpp
include/openrtmp/api/: .gitkeep  rtmp_server.hpp  server_lifecycle.hpp
include/openrtmp/core/: access_control.hpp  auth_service.hpp  buffer.hpp  config_manager.hpp  connection_pool.hpp  error_codes.hpp  error_isolation.hpp  external_auth_callback.hpp  log_rotation.hpp  metrics_collector.hpp  publisher_limit.hpp  result.hpp  shutdown_coordinator.hpp  structured_logger.hpp  tls_service.hpp  types.hpp
include/openrtmp/pal/: .gitkeep  file_pal.hpp  log_pal.hpp  network_pal.hpp  pal_types.hpp  thread_pal.hpp  timer_pal.hpp
include/openrtmp/pal/android/: android_foreground_service.hpp
include/openrtmp/pal/darwin/: darwin_log_pal.hpp  darwin_network_pal.hpp  darwin_service_wrapper.hpp  darwin_thread_pal.hpp  darwin_timer_pal.hpp
include/openrtmp/pal/ios/: ios_background_task.hpp
include/openrtmp/pal/linux/: linux_log_pal.hpp  linux_network_pal.hpp  linux_service_wrapper.hpp  linux_thread_pal.hpp  linux_timer_pal.hpp
include/openrtmp/pal/mobile/: battery_optimization.hpp  network_monitor.hpp
include/openrtmp/pal/windows/: windows_log_pal.hpp  windows_network_pal.hpp  windows_service_wrapper.hpp  windows_thread_pal.hpp  windows_timer_pal.hpp
include/openrtmp/protocol/: .gitkeep  amf_codec.hpp  chunk_parser.hpp  command_handler.hpp  handshake_handler.hpp  message_assembler.hpp
include/openrtmp/streaming/: .gitkeep  gop_buffer.hpp  latency_optimizer.hpp  media_distribution.hpp  media_handler.hpp  publisher_lifecycle.hpp  session.hpp  stream_registry.hpp  subscriber_buffer.hpp  subscriber_manager.hpp  throughput_optimizer.hpp
research/windows-iocp-spike/: CMakeLists.txt  DECISION.md  IOCP_RESEARCH.md  benchmark_test.cpp  iocp_echo_server.hpp  wsapoll_echo_server.hpp
research/windows-iocp-spike/tests/: iocp_server_test.cpp  wsapoll_server_test.cpp
src/api/: .gitkeep  rtmp_server.cpp  server_lifecycle.cpp
src/core/: access_control.cpp  auth_service.cpp  buffer.cpp  config_manager.cpp  connection_pool.cpp  error_isolation.cpp  external_auth_callback.cpp  log_rotation.cpp  metrics_collector.cpp  publisher_limit.cpp  shutdown_coordinator.cpp  structured_logger.cpp  tls_service.cpp  types.cpp
src/pal/android/: .gitkeep  android_foreground_service.cpp
src/pal/darwin/: darwin_log_pal.cpp  darwin_network_pal.cpp  darwin_service_wrapper.cpp  darwin_thread_pal.cpp  darwin_timer_pal.cpp
src/pal/ios/: .gitkeep  ios_background_task.cpp
src/pal/linux/: .gitkeep  linux_log_pal.cpp  linux_network_pal.cpp  linux_service_wrapper.cpp  linux_thread_pal.cpp  linux_timer_pal.cpp
src/pal/macos/: .gitkeep
src/pal/mobile/: battery_optimization.cpp  network_monitor.cpp
src/pal/windows/: .gitkeep  windows_log_pal.cpp  windows_network_pal.cpp  windows_service_wrapper.cpp  windows_thread_pal.cpp  windows_timer_pal.cpp
src/protocol/: .gitkeep  amf_codec.cpp  chunk_parser.cpp  command_handler.cpp  handshake_handler.cpp  message_assembler.cpp
src/streaming/: .gitkeep  gop_buffer.cpp  latency_optimizer.cpp  media_distribution.cpp  media_handler.cpp  publisher_lifecycle.cpp  session.cpp  stream_registry.cpp  subscriber_buffer.cpp  subscriber_manager.cpp  throughput_optimizer.cpp
tests/: CMakeLists.txt
tests/api/: rtmp_server_test.cpp  server_lifecycle_test.cpp
tests/core/: access_control_test.cpp  auth_service_test.cpp  buffer_test.cpp  config_manager_test.cpp  connection_pool_test.cpp  error_isolation_test.cpp  external_auth_callback_test.cpp  log_rotation_test.cpp  metrics_collector_test.cpp  publisher_limit_test.cpp  result_test.cpp  shutdown_coordinator_test.cpp  structured_logger_test.cpp  tls_service_test.cpp
tests/e2e/: ffmpeg_roundtrip_test.cpp  mobile_lifecycle_test.cpp  network_failover_test.cpp  obs_compatibility_test.cpp
tests/integration/: auth_callback_test.cpp  multi_subscriber_test.cpp  publish_flow_test.cpp  subscribe_flow_test.cpp  tls_connection_test.cpp
tests/pal/: pal_interface_test.cpp
tests/pal/android/: android_foreground_service_test.cpp
tests/pal/darwin/: darwin_log_pal_test.cpp  darwin_network_pal_test.cpp  darwin_service_wrapper_test.cpp  darwin_thread_pal_test.cpp  darwin_timer_pal_test.cpp
tests/pal/ios/: ios_background_task_test.cpp
tests/pal/linux/: linux_log_pal_test.cpp  linux_network_pal_test.cpp  linux_service_wrapper_test.cpp  linux_thread_pal_test.cpp  linux_timer_pal_test.cpp
tests/pal/mobile/: battery_optimization_test.cpp  network_monitor_test.cpp
tests/pal/windows/: windows_log_pal_test.cpp  windows_network_pal_test.cpp  windows_service_wrapper_test.cpp  windows_thread_pal_test.cpp  windows_timer_pal_test.cpp
tests/performance/: latency_test.cpp  scalability_test.cpp  throughput_test.cpp
tests/protocol/: amf_codec_test.cpp  chunk_parser_test.cpp  command_handler_test.cpp  handshake_handler_test.cpp  message_assembler_test.cpp
tests/streaming/: gop_buffer_test.cpp  latency_optimizer_test.cpp  media_distribution_test.cpp  media_handler_test.cpp  publisher_lifecycle_test.cpp  session_test.cpp  stream_registry_test.cpp  subscriber_buffer_test.cpp  subscriber_manager_test.cpp  throughput_optimizer_test.cpp
tools/kiro-parallel/: install.sh  kiro-parallel.md  kiro-parallel.sh  kiro_parallel.py
